@@ -1,3 +1,8 @@
+2007-04-30  Piotr Fusik  <fox@scene.pl>
+* gsplayer/gspasap.c, gsplayer/gspasap.def, win32/Makefile: made the GSPlayer
+  plugin work
+
+
 2007-04-29  Piotr Fusik  <fox@scene.pl>
 * asap.c, asap.h, win32/winamp/in_asap.c, win32/foobar2000/foo_asap.cpp,
   xmms/libasap.c, TODO: ASAP_Seek()
